--- a/src/component/Test/CardLayout.css
+++ b/src/component/Test/CardLayout.css
@@ -1,6 +1,6 @@
 .card-wrapper {
   max-width: 375px;
-  padding: 12px 16px;
+  padding: 1.2em 0;
   font-size: 1.6rem;
 }
 
@@ -14,7 +14,7 @@
 }
 
 .card-main {
-  width: 100%;
+  width: 291px;
 }
 
 .card-header {
@@ -31,7 +31,8 @@
 }
 
 .user-id {
-
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .upload-time {
