--- a/src/reset.css
+++ b/src/reset.css
@@ -1,56 +1,17 @@
-html {
-  font-size: 62.5%;
-}
-body,
-input {
-  font-family: "Lato", sans-serif;
-}
 body {
   margin: 0;
-  color: var(--dark-color);
 }
-ul,
-ol {
-  list-style: none;
+
+div, button, input, form, ul {
+  box-sizing: border-box;
+  margin: 0;
   padding: 0;
-  margin: 0;
 }
-h1 {
-  font-weight: normal;
-  margin: 0;
-}
-dl,
-dd,
-p {
-  margin: 0;
-}
-button,
-input {
-  appearance: none;
-  border: 0;
-  padding: 0;
-  background-color: transparent;
-  border-radius: 0;
-}
+
 button {
-  cursor: pointer;
+  font-family: inherit;
+  font-weight: inherit;
 }
-em {
-  font-style: normal;
-}
-a {
-  text-decoration: none;
-  cursor: pointer;
-}
-a:hover,
-a:focus {
-  text-decoration: underline;
-}
-img {
-  vertical-align: top;
-}
-fieldset {
-  border: 0 none;
-  margin: 0;
-  padding: 0;
-}
+
+
+
