--- a/src/page/Write.css
+++ b/src/page/Write.css
@@ -2,9 +2,9 @@
   height: 54px;
   width: 54px;
   border-radius: 27px;
-  background-color: #80ACEF;
+  background-color: #80acef;
 }
 
 .write-button-wrapper button:hover {
-  background-color: #6C98DB;
+  background-color: #6c98db;
 }
